// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at https://mozilla.org/MPL/2.0/.

syntax = "proto3";

package releases;
option go_package = "github.com/devnev/proto-releases;releases";

message Config {
    uint64 release = 1;
    bool preview = 2;

    message PackageMapping {
        string source_root = 1;
        string release_root = 2;
    }
    PackageMapping package = 4;

    message GoPackageMapping {
        string source_root = 1;
        string release_root = 2;
    }
    GoPackageMapping go_package = 3;
}
